deployment/kustomize/overlays/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: shpagin-devops-final-task-ingress
spec:
  rules:
  - host: shpagin.dacdevops.ru
    http:
      paths:
      - backend:
          service:
            name: shpagin-devops-final-task-service
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - shpagin.dacdevops.ru
    secretName: shpagin-devops-final-task-cert
